force-app/main/default/objects/Voce_di_Incasso__c/Voce_di_Incasso__c.object-meta.xml
<CustomObject>
    <label>Voce di Incasso</label>
    <nameField>
        <label>Titolo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voci di Incasso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>