force-app/main/default/objects/Voce_di_Incasso__c/fields/Ammontare__c.field-meta.xml
<CustomField>
    <fullName>Ammontare__c</fullName>
    <label>Ammontare</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>