force-app/main/default/objects/Voce_di_Incasso__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Donazione</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>