force-app/main/default/objects/Voce_di_Incasso__c/fields/Overview_Budget_per_Anno__c.field-meta.xml
<CustomField>
    <fullName>Overview_Budget_per_Anno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Overview Budget per Anno</label>
    <referenceTo>Overview_Budget_per_Anno__c</referenceTo>
    <relationshipLabel>Voci di Incasso</relationshipLabel>
    <relationshipName>Voci_di_Incasso</relationshipName>
    <type>Lookup</type>
</CustomField>