force-app/main/default/objects/Voce_di_Incasso__c/fields/Transazione__c.field-meta.xml
<CustomField>
    <fullName>Transazione__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transazione</label>
    <referenceTo>GiftTransaction</referenceTo>
    <relationshipLabel>Voci di Incasso</relationshipLabel>
    <relationshipName>Voci_di_Incasso</relationshipName>
    <type>Lookup</type>
</CustomField>